others-deploy/gateway-deployment.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway-ingress
  labels:
    name: ingress
spec:
  rules:
  - host: shopping.com
    http:
      paths:
      - pathType: Prefix
        path: "/users/"
        backend:
          service:
            name: user-api-services
            port: 
              number: 8080
      - pathType: Prefix
        path: "/products/"
        backend:
          service:
            name: product-api-services
            port:
              number: 8081
      - pathType: Prefix
        path: "/shoppings/"
        backend:
          service:
            name: shopping-api-services
            port:
              number: 8082
